k8s/ddns/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ddns
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ddns
          image: qmcgaw/ddns-updater:latest@sha256:780e2ad6cf5d40e025f68fe92d721d3ea3715d7fcaefc84370cfa676df63476f
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: server
              mountPath: /updater/data
              subPath: ddns
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
